Add loading video asset

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           playsinline
           preload="auto"
         >
-          <source src="file:///C:/Users/Marco/Downloads/SAND.mp4" type="video/mp4" />
+          <source src="assets/SAND.mp4" type="video/mp4" />
         </video>
         <div class="loading__text" id="loading-text">Accendo la sabbia...</div>
       </div>
