Improve mobile UI and touch controls

--- a/index.html
+++ b/index.html
@@ -52,6 +52,21 @@
         </aside>
 
         <section class="board-panel">
+          <div class="top-bar">
+            <div class="top-score">
+              <span class="label">Score</span>
+              <span id="score-top">0</span>
+            </div>
+            <div class="top-dots" aria-hidden="true">
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
           <div class="board-frame">
             <canvas id="game" width="70" height="140" aria-label="Sandtris board"></canvas>
             <div class="glass"></div>
