Refit mobile layout and in-game stats

--- a/index.html
+++ b/index.html
@@ -25,37 +25,21 @@
     </div>
     <div class="app">
       <main class="stage">
-        <aside class="side-panel">
-          <div class="stats stats--stack">
-            <div class="stat">
-              <span class="label">Score</span>
-              <span id="score">0</span>
-            </div>
-            <div class="stat">
-              <span class="label">Linee</span>
-              <span id="lines">0</span>
-            </div>
-            <div class="stat">
-              <span class="label">Livello</span>
-              <span id="level">1</span>
-            </div>
-          </div>
-          <div class="leaderboard">
-            <div class="leaderboard-title">Weekly Leaderboard</div>
-            <div class="leaderboard-list" id="leaderboard-list"></div>
-            <div class="leaderboard-rank">
-              <div class="rank-title">Your Rank</div>
-              <div class="rank-value" id="rank-value">-</div>
-              <div class="rank-score" id="rank-score">-</div>
-            </div>
-          </div>
-        </aside>
-
         <section class="board-panel">
           <div class="top-bar">
-            <div class="top-score">
-              <span class="label">Score</span>
-              <span id="score-top">0</span>
+            <div class="top-stats">
+              <div class="top-stat">
+                <span class="label">Score</span>
+                <span id="score">0</span>
+              </div>
+              <div class="top-stat">
+                <span class="label">Linee</span>
+                <span id="lines">0</span>
+              </div>
+              <div class="top-stat">
+                <span class="label">Livello</span>
+                <span id="level">1</span>
+              </div>
             </div>
             <div class="top-dots" aria-hidden="true">
               <span class="dot"></span>
@@ -104,12 +88,6 @@
             </div>
           </div>
         </section>
-        <aside class="right-panel">
-          <div class="mini-card">
-            <div class="mini-title">Next</div>
-            <canvas id="next" width="72" height="72"></canvas>
-          </div>
-        </aside>
       </main>
     </div>
     <footer class="credit">Made with ❤️ by Ch3rry</footer>
