Add PWA manifest and icons

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Sandtris</title>
-    <link rel="icon" href="assets/app-icon.png" />
-    <link rel="apple-touch-icon" href="assets/app-icon.png" />
-    <link rel="stylesheet" href="style.css?v=20260201-10" />
+    <link rel="manifest" href="manifest.webmanifest?v=20260201-11" />
+    <meta name="theme-color" content="#4b34b9" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Sandtris" />
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/icon-512.png" />
+    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
+    <link rel="stylesheet" href="style.css?v=20260201-11" />
   </head>
   <body>
     <div class="app">
@@ -125,6 +131,6 @@
       </main>
     </div>
     <footer class="credit">Made with ❤️ by Ch3rry</footer>
-    <script src="app.js?v=20260201-10"></script>
+    <script src="app.js?v=20260201-11"></script>
   </body>
 </html>
