--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Sandtris</title>
-    <link rel="manifest" href="manifest.webmanifest?v=20260201-21" />
+    <link rel="manifest" href="manifest.webmanifest?v=20260201-22" />
     <meta name="theme-color" content="#4b34b9" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icon-192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="assets/icon-512.png" />
     <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
-    <link rel="stylesheet" href="style.css?v=20260201-21" />
+    <link rel="stylesheet" href="style.css?v=20260201-22" />
   </head>
   <body>
     <div class="app">
@@ -44,7 +44,7 @@
         <section class="board-panel">
           <div class="top-bar">
             <div class="hud-row">
-              <button class="hud-icon hud-icon--gear" type="button" aria-label="Settings"></button>
+              <button class="hud-icon hud-icon--gear" type="button" aria-label="Menu" data-menu="menu"></button>
               <div class="hud-pill">
                 <span class="hud-icon hud-icon--crown" aria-hidden="true"></span>
                 <span class="hud-label">Best</span>
@@ -138,6 +138,6 @@
       </main>
     </div>
     <footer class="credit">Made with ❤️ by Ch3rry</footer>
-    <script src="app.js?v=20260201-21"></script>
+    <script src="app.js?v=20260201-22"></script>
   </body>
 </html>
