Auto prompt notifications and 30-min reminders

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Sandtris</title>
-    <link rel="manifest" href="manifest.webmanifest?v=20260202-16" />
+    <link rel="manifest" href="manifest.webmanifest?v=20260202-18" />
     <meta name="theme-color" content="#4b34b9" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icon-192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="assets/icon-512.png" />
     <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
-    <link rel="stylesheet" href="style.css?v=20260202-16" />
+    <link rel="stylesheet" href="style.css?v=20260202-18" />
   </head>
   <body>
     <div class="app">
@@ -72,7 +72,6 @@
                     <span class="start-best-label">BEST</span>
                     <span id="menu-best">0</span>
                   </div>
-                  <button class="start-secondary start-secondary--notify" type="button" id="notify-test-now">TEST NOW</button>
                   <button class="start-play" data-menu="start">PLAY</button>
                   <div class="start-actions">
                     <button class="start-secondary" data-menu="settings">SETTINGS</button>
@@ -93,7 +92,6 @@
                 <div class="menu-kicker">SETTINGS</div>
                 <p class="menu-text">Attiva le notifiche per ricevere il reminder giornaliero.</p>
                 <div class="menu-actions">
-                  <button class="menu-btn menu-btn--start" type="button" id="notify-btn">ENABLE</button>
                   <button class="menu-btn menu-btn--about" data-menu="back">BACK</button>
                 </div>
                 <p class="menu-text menu-text--hint" id="notify-status">Notifiche: disattivate</p>
@@ -143,6 +141,18 @@
     <footer class="credit">Made with ❤️ by Ch3rry</footer>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
-    <script src="app.js?v=20260202-16"></script>
+    <div class="notify-popup" id="notify-popup" aria-hidden="true">
+      <div class="notify-popup__card">
+        <div class="menu-kicker">NOTIFICHE</div>
+        <p class="menu-text" id="notify-popup-text">
+          Attiva le notifiche per ricevere promemoria e tornare a giocare.
+        </p>
+        <div class="menu-actions">
+          <button class="menu-btn menu-btn--start" type="button" id="notify-popup-btn">ATTIVA</button>
+          <button class="menu-btn menu-btn--about" type="button" id="notify-popup-close">NON ORA</button>
+        </div>
+      </div>
+    </div>
+    <script src="app.js?v=20260202-18"></script>
   </body>
 </html>
