--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Sandtris</title>
-    <link rel="manifest" href="manifest.webmanifest?v=20260204-08" />
+    <link rel="manifest" href="manifest.webmanifest?v=20260204-09" />
     <meta name="theme-color" content="#4b34b9" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -14,9 +14,10 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icon-192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="assets/icon-512.png" />
     <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
-    <link rel="stylesheet" href="style.css?v=20260204-08" />
+    <link rel="stylesheet" href="style.css?v=20260204-09" />
   </head>
   <body>
+    <canvas class="bg-sand" id="bg-sand" aria-hidden="true"></canvas>
     <div class="app">
       <main class="stage">
         <aside class="side-panel">
@@ -157,6 +158,6 @@
         </div>
       </div>
     </div>
-    <script src="app.js?v=20260204-08"></script>
+    <script src="app.js?v=20260204-09"></script>
   </body>
 </html>
