Restyle install gate and auto-prompt notifications

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Sandtris</title>
-    <link rel="manifest" href="manifest.webmanifest?v=20260204-13" />
+    <link rel="manifest" href="manifest.webmanifest?v=20260204-14" />
     <meta name="theme-color" content="#4b34b9" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -14,15 +14,15 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icon-192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="assets/icon-512.png" />
     <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
-    <link rel="stylesheet" href="style.css?v=20260204-13" />
+    <link rel="stylesheet" href="style.css?v=20260204-14" />
   </head>
   <body>
     <canvas class="bg-sand" id="bg-sand" aria-hidden="true"></canvas>
     <div class="install-gate install-gate--hidden" id="install-gate" aria-hidden="true">
       <div class="install-gate__card">
-        <div class="install-gate__title">Aggiungi Sandtris</div>
+        <div class="install-gate__title">Aggiungi Sandtris alla Home</div>
         <p class="install-gate__text">
-          Per la migliore esperienza, aggiungi l'app alla schermata Home.
+          Installa l'app per un'esperienza migliore e notifiche rapide.
         </p>
         <button class="install-gate__btn" id="install-btn" type="button">
           Aggiungi alla schermata Home
@@ -170,6 +170,6 @@
         </div>
       </div>
     </div>
-    <script src="app.js?v=20260204-13"></script>
+    <script src="app.js?v=20260204-14"></script>
   </body>
 </html>
