Add Gmail support link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Sandtris</title>
-    <link rel="manifest" href="manifest.webmanifest?v=20260204-20" />
+    <link rel="manifest" href="manifest.webmanifest?v=20260204-21" />
     <meta name="theme-color" content="#4b34b9" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4748378283833672"
      crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css?v=20260204-20" />
+    <link rel="stylesheet" href="style.css?v=20260204-21" />
   </head>
   <body>
     <canvas class="bg-sand" id="bg-sand" aria-hidden="true"></canvas>
@@ -159,6 +159,10 @@
       </main>
     </div>
     <footer class="credit" data-i18n="credit">Made with ❤️ by Ch3rry</footer>
+    <a class="gmail-link pressable" href="https://mail.google.com/mail/?view=cm&fs=1&to=support@sandtris.fun"
+      target="_blank" rel="noopener noreferrer" aria-label="Email support">
+      <img class="gmail-icon" src="assets/gmail.jpg" alt="Gmail" />
+    </a>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
     <div class="tutorial" id="tutorial" aria-hidden="true">
@@ -186,6 +190,6 @@
         </div>
       </div>
     </div>
-    <script src="app.js?v=20260204-20"></script>
+    <script src="app.js?v=20260204-21"></script>
   </body>
 </html>
