Add report bug badge

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Sandtris</title>
-    <link rel="manifest" href="manifest.webmanifest?v=20260204-23" />
+    <link rel="manifest" href="manifest.webmanifest?v=20260204-24" />
     <meta name="theme-color" content="#4b34b9" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4748378283833672"
      crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css?v=20260204-23" />
+    <link rel="stylesheet" href="style.css?v=20260204-24" />
   </head>
   <body>
     <canvas class="bg-sand" id="bg-sand" aria-hidden="true"></canvas>
@@ -159,9 +159,12 @@
       </main>
     </div>
     <footer class="credit" data-i18n="credit">Made with ❤️ by Ch3rry</footer>
-    <a class="gmail-link pressable" href="mailto:support@sandtris.fun" aria-label="Email support">
-      <img class="gmail-icon" src="assets/gmail.jpg" alt="Gmail" />
-    </a>
+    <div class="support-stack" aria-hidden="true">
+      <img class="report-icon" src="assets/report.png" alt="Report a bug" />
+      <a class="gmail-link pressable" href="mailto:support@sandtris.fun" aria-label="Email support">
+        <img class="gmail-icon" src="assets/gmail.jpg" alt="Gmail" />
+      </a>
+    </div>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
     <div class="tutorial" id="tutorial" aria-hidden="true">
@@ -189,6 +192,6 @@
         </div>
       </div>
     </div>
-    <script src="app.js?v=20260204-23"></script>
+    <script src="app.js?v=20260204-24"></script>
   </body>
 </html>
